force-app/main/default/objects/SAC_DocumentoEnvio__c/SAC_DocumentoEnvio__c.object-meta.xml
<CustomObject>
    <label>Documento a enviar</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Nombre de Documento a enviar</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Documentos a enviar</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>