force-app/main/default/objects/SAC_DocumentoEnvio__c/fields/SAC_Caso__c.field-meta.xml
<CustomField>
    <fullName>SAC_Caso__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Caso</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Documentos a enviar</relationshipLabel>
    <relationshipName>Documentos_a_enviar</relationshipName>
    <type>Lookup</type>
</CustomField>