force-app/main/default/objects/SAC_DocumentoEnvio__c/fields/SAC_CP__c.field-meta.xml
<CustomField>
    <fullName>SAC_CP__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Código Postal</label>
    <type>TextArea</type>
</CustomField>