force-app/main/default/objects/SAC_DocumentoEnvio__c/fields/SAC_DocPDF__c.field-meta.xml
<CustomField>
    <fullName>SAC_DocPDF__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SAC_DocPDF</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>