force-app/main/default/objects/SAC_DocumentoEnvio__c/fields/SAC_Documento__c.field-meta.xml
<CustomField>
    <fullName>SAC_Documento__c</fullName>
    <description>Campo que almacena la Id del ContentDocument del presente documento.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Documento</label>
    <length>20</length>
    <type>Text</type>
</CustomField>