force-app/main/default/objects/SAC_DocumentoEnvio__c/fields/SAC_Footer__c.field-meta.xml
<CustomField>
    <fullName>SAC_Footer__c</fullName>
    <description>Pie de página de cada página del pdf que creamos</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Footer</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>