force-app/main/default/objects/SAC_DocumentoEnvio__c/fields/SAC_NombrePlantillaLateral__c.field-meta.xml
<CustomField>
    <fullName>SAC_NombrePlantillaLateral__c</fullName>
    <description>Nombre del recurso static que se usará como plantilla general. En función del idioma del caso, se selecciona  una u otra plantilla lateral</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Nombre plantilla lateral</label>
    <length>20</length>
    <type>Text</type>
</CustomField>