force-app/main/default/objects/SAC_DocumentoEnvio__c/fields/SAC_TipoDocumento__c.field-meta.xml
<CustomField>
    <fullName>SAC_TipoDocumento__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tipo Documento</label>
    <type>TextArea</type>
</CustomField>