force-app/main/default/objects/SAC_DocumentoEnvio__c/fields/SAC_URL__c.field-meta.xml
<CustomField>
    <fullName>SAC_URL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>