force-app/main/default/objects/SAC_DocumentoEnvio__c/fields/SAC_Version__c.field-meta.xml
<CustomField>
    <fullName>SAC_Version__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Version</label>
    <length>20</length>
    <type>Text</type>
</CustomField>